tests/sem/pass/buildIn_func.c
void ps() {
    return print_s((char*) "fewfdse");
}

char rc() {
    return read_c();
}

void pi() {
    return print_i(1);
}

void pc() {
    return print_c('z');
}

int ri() {
    return read_i();
}

void* mcm() {
    return mcmalloc(25443);
}
