tests/sem/error/builtIn.c
char read_c(){}
int read_i(){}
void print_s(){}
void print_i(){}
void print_c(){}
void* mcmalloc(){}